Split configuration docs into focused sub-pages
The monolithic configuration.adoc (899 lines) covered too many topics
in a single page. Extract three sub-pages:

- configuration/inheritance.adoc — inherit_from, inherit_gem, inherit_mode
- configuration/include_exclude.adoc — file selection, path relativity
- configuration/cop_settings.adoc — Enabled, Severity, AutoCorrect, etc.

The overview page retains general topics: file locations, defaults,
TargetRubyVersion, ParserEngine, and other AllCops settings.

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -12,7 +12,11 @@
 ** xref:usage/server.adoc[Server]
 ** xref:usage/source_code_directives.adoc[Source Code Directives]
 ** xref:usage/profiling.adoc[Profiling]
-* xref:configuration.adoc[Configuration]
+* Configuration
+** xref:configuration.adoc[Overview]
+** xref:configuration/inheritance.adoc[Inheritance]
+** xref:configuration/include_exclude.adoc[Including and Excluding Files]
+** xref:configuration/cop_settings.adoc[Configuring Cops]
 * xref:cops.adoc[Cops]
 * xref:formatters.adoc[Formatters]
 * Cop Documentation
