--- a/docs/modules/ROOT/pages/configuration.adoc
+++ b/docs/modules/ROOT/pages/configuration.adoc
@@ -20,8 +20,11 @@ Layout/LineLength:
   Max: 99
 ----
 
-NOTE: Qualifying cop name with its type, e.g., `Style`, is recommended,
-but not necessary as long as the cop name is unique across all types.
+This page covers general configuration topics. For more specific areas, see:
+
+* xref:configuration/inheritance.adoc[Inheritance] — `inherit_from`, `inherit_gem`, and `inherit_mode`
+* xref:configuration/include_exclude.adoc[Including and Excluding Files] — controlling which files RuboCop inspects
+* xref:configuration/cop_settings.adoc[Configuring Cops] — `Enabled`, `Severity`, `AutoCorrect`, `AllowedMethods`, `AllowedPatterns`
 
 == Config file locations
 
@@ -58,231 +61,6 @@ NOTE: All the previous logic does not apply if a specific configuration file is 
 on the command line through the `--config` flag. In that case, the resolved
 configuration file will be the one passed to the CLI.
 
-== Inheritance
-
-All configuration inherits from https://github.com/rubocop/rubocop/blob/master/config/default.yml[RuboCop's default configuration] (See
-"Defaults").
-
-RuboCop also supports inheritance in user's configuration files. The most common
-example would be the `.rubocop_todo.yml` file (See "Automatically Generated
-Configuration" below).
-
-Settings in the child file (that which inherits) override those in the parent
-(that which is inherited), with the following caveats.
-
-=== Inheritance of hashes vs. other types
-
-Configuration parameters that are hashes, for example `PreferredMethods` in
-`Style/CollectionMethods`, are merged with the same parameter in the parent
-configuration. This means that any key-value pairs given in child configuration
-override the same keys in parent configuration. Giving `~`, YAML's
-representation of `nil`, as a value cancels the setting of the corresponding
-key in the parent configuration. For example:
-
-[source,yaml]
-----
-Style/CollectionMethods:
-  Enabled: true
-  PreferredMethods:
-    # No preference for collect, keep all others from default config.
-    collect: ~
-----
-
-Other types, such as `AllCops` / `Include` (an array), are overridden by the
-child setting.
-
-Arrays override because if they were merged, there would be no way to
-remove elements in child files.
-
-However, advanced users can still merge arrays using the `inherit_mode` setting.
-See "Merging arrays using inherit_mode" below.
-
-=== Inheriting from another configuration file in the project
-
-The optional `inherit_from` directive is used to include configuration
-from one or more files. This makes it possible to have the common
-project settings in the `.rubocop.yml` file at the project root, and
-then only the deviations from those rules in the subdirectories. The
-files can be given with absolute paths or paths relative to the file
-where they are referenced. The settings after an `inherit_from`
-directive override any settings in the file(s) inherited from. When
-multiple files are included, the first file in the list has the lowest
-precedence and the last one has the highest. The format for multiple
-inheritance is:
-
-[source,yaml]
-----
-inherit_from:
-  - ../.rubocop.yml
-  - ../conf/.rubocop.yml
-----
-
-`inherit_from` also accepts a glob, for example:
-
-[source,yaml]
-----
-inherit_from:
-  - packages/*/.rubocop_todo.yml
-----
-
-The example above is one potential use-case: allowing components within your repo to organize their own `.rubocop_todo.yml` files.
-
-== Inheriting configuration from a remote URL
-
-The optional `inherit_from` directive can contain a full url to a remote
-file. This makes it possible to have common project settings stored on a http
-server and shared between many projects.
-
-The remote config file is cached locally and is only updated if:
-
-* The file does not exist.
-* The file has not been updated in the last 24 hours.
-* The remote copy has a newer modification time than the local copy.
-
-This local cache is stored in xref:usage/caching.adoc#cache-path[the configured cache path],
-maintaining the remote filename prefix. Please note that the root of relative paths specified
-in `Include` or `Exclude` changes depending on the configuration file name,
-as explained in xref:#path-relativity["Path relativity"]. This behavior was introduced in RuboCop 1.84.
-
-You can inherit from both remote and local files in the same config and the
-same inheritance rules apply to remote URLs and inheriting from local
-files where the first file in the list has the lowest precedence and the
-last one has the highest. The format for multiple inheritance using URLs is:
-
-[source,yaml]
-----
-inherit_from:
-  - http://www.example.com/rubocop.yml
-  - ../.rubocop.yml
-----
-
-You can inherit from a repo with basic auth that is authorized to access the repo as follows:
-
-[source,yaml]
-----
-inherit_from:
-  - http://<user_name>:<password>@raw.githubusercontent.com/example/rubocop.yml
-----
-
-A link:https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens[GitHub personal access token]
-can also be configured as follows:
-
-[source,yaml]
-----
-inherit_from:
-  - http://<personal_access_token>@raw.githubusercontent.com/example/rubocop.yml
-----
-
-=== Inheriting configuration from a dependency gem
-
-The optional `inherit_gem` directive is used to include configuration from
-one or more gems external to the current project. This makes it possible to
-inherit a shared dependency's RuboCop configuration that can be used from
-multiple disparate projects.
-
-Configurations inherited in this way will be essentially _prepended_ to the
-`inherit_from` directive, such that the `inherit_gem` configurations will be
-loaded first, then the `inherit_from` relative file paths will be loaded
-(overriding the configurations from the gems), and finally the remaining
-directives in the configuration file will supersede any of the inherited
-configurations. This means the configurations inherited from one or more gems
-have the lowest precedence of inheritance.
-
-The directive should be formatted as a YAML Hash using the gem name as the
-key and the relative path within the gem as the value:
-
-[source,yaml]
-----
-inherit_gem:
-  my-shared-gem: .rubocop.yml
-  cucumber: conf/rubocop.yml
-----
-
-An array can also be used as the value to include multiple configuration files
-from a single gem:
-
-[source,yaml]
-----
-inherit_gem:
-  my-shared-gem:
-    - default.yml
-    - strict.yml
-----
-
-NOTE: If the shared dependency is declared using a https://bundler.io/[Bundler]
-Gemfile and the gem was installed using `bundle install`, it would be
-necessary to also invoke RuboCop using Bundler in order to find the
-dependency's installation path at runtime:
-
-[source,sh]
-----
-$ bundle exec rubocop <options...>
-----
-
-=== Merging arrays using inherit_mode
-
-The optional directive `inherit_mode` specifies which configuration keys that
-have array values should be merged together instead of overriding the inherited
-value.
-
-This applies to explicit inheritance using `inherit_from` as well as implicit
-inheritance from https://github.com/rubocop/rubocop/blob/master/config/default.yml[the default configuration].
-
-Given the following config:
-
-[source,yaml]
-----
-# .rubocop.yml
-inherit_from:
-  - shared.yml
-
-inherit_mode:
-  merge:
-    - Exclude
-
-AllCops:
-  Exclude:
-    - 'generated/**/*.rb'
-
-Style/For:
-  Exclude:
-    - bar.rb
-----
-
-[source,yaml]
-----
-# .shared.yml
-Style/For:
-  Exclude:
-    - foo.rb
-----
-
-The list of ``Exclude``s for the `Style/For` cop in this example will be
-`['foo.rb', 'bar.rb']`. Similarly, the `AllCops:Exclude` list will contain all
-the default patterns plus the `+generated/**/*.rb+` entry that was added locally.
-
-The directive can also be used on individual cop configurations to override
-the global setting.
-
-[source,yaml]
-----
-inherit_from:
-  - shared.yml
-
-inherit_mode:
-  merge:
-    - Exclude
-
-Style/For:
-  inherit_mode:
-    override:
-      - Exclude
-  Exclude:
-    - bar.rb
-----
-
-In this example the `Exclude` would only include `bar.rb`.
-
 == Pre-processing
 
 Configuration files are pre-processed using the ERB templating mechanism. This
@@ -299,6 +77,7 @@ AllCops:
   <% end %>
 ----
 
+[[defaults]]
 == Defaults
 
 The file https://github.com/rubocop/rubocop/blob/master/config/default.yml[config/default.yml] under the RuboCop home directory contains the
@@ -306,390 +85,6 @@ default settings that all configurations inherit from. Project and personal
 `.rubocop.yml` files need only make settings that are different from the
 default ones. If there is no `.rubocop.yml` file in the project, home or XDG
 directories, `config/default.yml` will be used.
-
-== Including/Excluding files
-
-RuboCop does a recursive file search starting from the directory it is
-run in, or directories given as command line arguments. Files that
-match any pattern listed under `AllCops`/`Include` and extensionless
-files with a hash-bang (`#!`) declaration containing one of the known
-ruby interpreters listed under `AllCops`/`RubyInterpreters` are
-inspected, unless the file also matches a pattern in
-`AllCops`/`Exclude`. Hidden directories (i.e., directories whose names
-start with a dot) are not searched by default.
-
-Here is an example that might be used for a Rails project:
-
-[source,yaml]
-----
-AllCops:
-  Exclude:
-    - 'db/**/*'
-    - 'config/**/*'
-    - 'script/**/*'
-    - 'bin/{rails,rake}'
-    - !ruby/regexp /old_and_unused\.rb$/
-
-# other configuration
-# ...
-----
-
-NOTE: When inspecting a certain directory(or file)
-given as RuboCop's command line arguments,
-patterns listed under `AllCops` / `Exclude` are also inspected.
-If you want to apply `AllCops` / `Exclude` rules in this circumstance,
-add `--force-exclusion` to the command line argument.
-
-Here is an example:
-
-[source,yaml]
-----
-# .rubocop.yml
-AllCops:
-  Exclude:
-    - foo.rb
-----
-
-If `foo.rb` is specified as a RuboCop's command line argument, the result is:
-
-[source,sh]
-----
-# RuboCop inspects foo.rb.
-$ bundle exec rubocop foo.rb
-
-# RuboCop does not inspect foo.rb.
-$ bundle exec rubocop --force-exclusion foo.rb
-----
-
-=== Path relativity
-
-In `.rubocop.yml` and any other configuration file beginning with `.rubocop`,
-files, and directories are specified relative to the directory where the
-configuration file is. In configuration files that don't begin with `.rubocop`,
-e.g. `our_company_defaults.yml`, paths are relative to the directory where
-`rubocop` is run.
-
-This affects cops that have customisable paths: if the default is `db/migrate/\*.rb`,
-and the cop is enabled in `db/migrate/.rubocop.yml`, the path will need to be
-explicitly set as `*.rb`, as the default will look for `db/migrate/db/migrate/*.rb`.
-This is unlikely to be what you wanted.
-
-=== Unusual files, that would not be included by default
-
-RuboCop comes with a comprehensive list of common ruby file names and
-extensions. But, if you'd like RuboCop to check files that are not included by
-default, you'll need to pass them in on the command line, or add entries for
-them under `AllCops`/`Include`. Remember that your configuration files override
-https://github.com/rubocop/rubocop/blob/master/config/default.yml[RuboCops's defaults]. In the following example, we want to include
-`foo.unusual_extension`, but we also must copy any other patterns we need from
-the overridden `default.yml`.
-
-[source,yaml]
-----
-AllCops:
-  Include:
-    - foo.unusual_extension
-    - '**/*.rb'
-    - '**/*.gemfile'
-    - '**/*.gemspec'
-    - '**/*.rake'
-    - '**/*.ru'
-    - '**/Gemfile'
-    - '**/Rakefile'
-----
-
-This behavior of `Include` (overriding `default.yml`) was introduced in
-https://github.com/rubocop/rubocop/releases/tag/v0.56.0[0.56.0]
-via https://github.com/rubocop/rubocop/pull/5882[#5882]. This change allows
-people to include/exclude precisely what they need to, without the defaults
-getting in the way.
-
-==== Another example, using `inherit_mode`
-
-[source,yaml]
-----
-inherit_mode:
-  merge:
-    - Include
-
-AllCops:
-  Include:
-    - foo.unusual_extension
-----
-
-See "Merging arrays using inherit_mode" above.
-
-=== Deprecated patterns
-
-Patterns that are just a file name, e.g. `Rakefile`, will match
-that file name in any directory, but this pattern style is deprecated. The
-correct way to match the file in any directory, including the current, is
-`+**/Rakefile+`.
-
-The pattern `+config/**+` will match any file recursively under
-`config`, but this pattern style is deprecated and should be replaced by
-`+config/**/*+`.
-
-==== `Include` and `Exclude` are relative to their directory
-
-The `Include` and `Exclude` parameters are special. They are
-valid for the directory tree starting where they are defined. They are not
-shadowed by the setting of `Include` and `Exclude` in other `.rubocop.yml`
-files in subdirectories. This is different from all other parameters, who
-follow RuboCop's general principle that configuration for an inspected file
-is taken from the nearest `.rubocop.yml`, searching upwards.
-
-NOTE: This behavior
-will be overridden if you specify the `--ignore-parent-exclusion` command line
-argument.
-
-=== Cop-specific `Include` and `Exclude`
-
-Cops can be run only on specific sets of files when that's needed (for
-instance you might want to run some Rails model checks only on files whose
-paths match `app/models/*.rb`). All cops support the
-`Include` param.
-
-[source,yaml]
-----
-Rails/HasAndBelongsToMany:
-  Include:
-    - app/models/*.rb
-----
-
-Cops can also exclude only specific sets of files when that's needed (for
-instance you might want to run some cop only on a specific file). All cops support the
-`Exclude` param.
-
-[source,yaml]
-----
-Rails/HasAndBelongsToMany:
-  Exclude:
-    - app/models/problematic.rb
-----
-
-== Generic configuration parameters
-
-In addition to `Include` and `Exclude`, the following parameters are available
-for every cop.
-
-=== Enabled
-
-Specific cops can be disabled by setting `Enabled` to `false` for that specific cop.
-
-[source,yaml]
-----
-Layout/LineLength:
-  Enabled: false
-----
-
-Most cops are enabled by default. Cops, introduced or significantly updated
-between major versions, are in a special pending status (read more in
-xref:versioning.adoc["Versioning"]). Some cops, configured the above `Enabled: false`
-in https://github.com/rubocop/rubocop/blob/master/config/default.yml[config/default.yml],
-are disabled by default.
-
-The cop enabling process can be altered by setting `DisabledByDefault` or
-`EnabledByDefault` (but not both) to `true`. These settings override the default for *all*
-cops to disabled or enabled, except `Lint/Syntax` which is always enabled,
-regardless of the cops' default values (whether enabled, disabled or pending).
-
-[source,yaml]
-----
-AllCops:
-  DisabledByDefault: true
-----
-
-All cops except `Lint/Syntax` are then disabled by default. Only cops appearing in user
-configuration files with `Enabled: true` will be enabled; every other cop will
-be disabled without having to explicitly disable them in configuration. It is
-also possible to enable entire departments by adding for example
-
-[source,yaml]
-----
-Style:
-  Enabled: true
-----
-
-All cops in the `Style` department are then enabled. In this case, only the cops
-in the `Style` department that are enabled by default will be enabled.
-The cops in the `Style` department that are disabled by default will remain disabled.
-
-If a department is disabled, cops in that department can still be individually
-enabled, and that setting overrides the setting for its department in the same
-configuration file and in any inherited file.
-
-[source,yaml]
-----
-inherit_from: config_that_disables_the_metrics_department.yml
-
-Metrics/MethodLength:
-  Enabled: true
-
-Style:
-  Enabled: false
-
-Style/Alias:
-  Enabled: true
-----
-
-=== Severity
-
-Each cop has a default severity level based on which department it belongs
-to. The level is normally `warning` for `Lint` and `convention` for all the
-others, but this can be changed in user configuration. Cops can customize their
-severity level. Allowed values are `info`, `refactor`, `convention`, `warning`, `error`
-and `fatal`.
-
-Cops with severity `info` will be reported but will not cause `rubocop` to return
-a non-zero value.
-
-There is one exception from the general rule above and that is `Lint/Syntax`, a
-special cop that checks for syntax errors before the other cops are invoked. It
-cannot be disabled and its severity (`fatal`) cannot be changed in
-configuration.
-
-[source,yaml]
-----
-Lint:
-  Severity: error
-
-Metrics/CyclomaticComplexity:
-  Severity: warning
-----
-
-=== Details
-
-Individual cops can be embellished with extra details in offense messages:
-
-[source,yaml]
-----
-Layout/LineLength:
-  Details: >-
-    If lines are too short, text becomes hard to read because you must
-    constantly jump from one line to the next while reading. If lines are too
-    long, the line jumping becomes too hard because you "lose the line" while
-    going back to the start of the next line. 80 characters is a good
-    compromise.
-----
-
-These details will only be seen when RuboCop is run with the `--extra-details` flag or if `ExtraDetails` is set to true in your global RuboCop configuration.
-
-=== AutoCorrect
-
-Cops that support the `--autocorrect` option offer flexible settings for autocorrection.
-These settings can be specified in the configuration file as follows:
-
-- `always`
-- `contextual`
-- `disabled`
-
-==== `always (Default)`
-
-This setting enables autocorrection always by default. For backward compatibility, `true` is treated the same as `always`.
-
-[source,yaml]
-----
-Style/PerlBackrefs:
-  AutoCorrect: always # or true
-----
-
-==== `contextual`
-
-This setting enables autocorrection when launched from the `rubocop` command, but it is not available through LSP.
-e.g., `rubocop --lsp`, `rubocop --editor-mode`, or a program where `RuboCop::LSP.enable` has been applied.
-
-Inspections via the command line are treated as code that has been finalized.
-
-[source,yaml]
-----
-Style/PerlBackrefs:
-  AutoCorrect: contextual
-----
-
-This setting prevents autocorrection during editing in the editor. e.g, with `textDocument/formatting` LSP method.
-However `workspace/executeCommand` LSP method, which is triggered by intentional user actions, respects the user's intention for autocorrection.
-
-Additionally, for cases like `Metrics` cops where the highlight range extends over the entire body of classes, modules, methods, or blocks
-offending range will be confined to only name. This approach helps to avoid redundant and noisy offenses in editor display.
-
-==== `disabled`
-
-This setting disables autocorrection. For backward compatibility, `false` is treated the same as `disabled`.
-
-[source,yaml]
-----
-Style/PerlBackrefs:
-  AutoCorrect: disabled # or false
-----
-
-== Common configuration parameters
-There are some configuration parameters that are shared by many cops, with the same behavior.
-
-=== AllowedMethods
-
-Many cops can be configured to exclude specific methods from inspection.
-`AllowedMethods` accepts a list of method names as strings. A cop will skip
-any method whose name exactly matches one of the entries:
-
-[source,yaml]
-----
-Metrics/BlockLength:
-  AllowedMethods:
-    - refine
-    - class_methods
-    - instance_methods
-----
-
-Only bare method names are supported -- you cannot use qualified names like `Foo.bar`
-or `foo.bar`. Class and module names are not supported either. If you need
-more flexibility, use `AllowedPatterns` instead.
-
-NOTE: The `IgnoredMethods` and `ExcludedMethods` parameters are deprecated aliases for
-`AllowedMethods`. They still work, but you should migrate your configuration to use
-`AllowedMethods`.
-
-=== AllowedPatterns
-
-`AllowedPatterns` provides regex-based exclusions for cops that support it.
-Each entry is treated as a regular expression -- strings are automatically
-converted via `Regexp.new`, so the `!ruby/regexp` YAML tag is optional.
-
-[source,yaml]
-----
-Metrics/BlockLength:
-  AllowedPatterns:
-    # These two forms are equivalent:
-    - !ruby/regexp /\b(class|instance)_methods\b/
-    - '\b(class|instance)_methods\b'
-----
-
-What the pattern matches against depends on the cop:
-
-* **Metrics cops** (e.g. `BlockLength`, `MethodLength`) match against the **method name**.
-* **Layout/LineLength** matches against the **entire source line**.
-* **Naming cops** (e.g. `MethodName`, `VariableName`) match against the **identifier name**.
-
-For example, to allow all methods starting with `test_` in `Metrics/MethodLength`:
-
-[source,yaml]
-----
-Metrics/MethodLength:
-  AllowedPatterns:
-    - ^test_
-----
-
-To allow long lines containing URLs in `Layout/LineLength`:
-
-[source,yaml]
-----
-Layout/LineLength:
-  AllowedPatterns:
-    - '^\s*#\s*https?://'
-----
-
-NOTE: The `IgnoredPatterns` parameter is a deprecated alias for `AllowedPatterns`.
-It still works, but you should migrate your configuration to use `AllowedPatterns`.
 
 == Setting the target Ruby version
 
@@ -773,10 +168,6 @@ AllCops:
 ----
 
 `parser_prism` tends to perform analysis faster than `parser_whitequark`.
-
-== Automatically Generated Configuration
-
-If you have a code base with an overwhelming amount of offenses, you can use `rubocop --auto-gen-config` to generate a `.rubocop_todo.yml` that disables all current offenses. See xref:usage/auto_gen_config.adoc[Auto-generating Configuration] for details.
 
 == Setting the style guide URL
 
