--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -23,7 +23,8 @@ linter:
 * Extremely flexible configuration that allows you to adapt RuboCop to pretty much every style and preference
 * It's easy to extend RuboCop with custom cops and formatters
 * A vast number of ready-made xref:extensions.adoc[extensions] (e.g. `rubocop-rails`, `rubocop-rspec`, `rubocop-performance` and `rubocop-minitest`)
-* Wide editor/IDE support
+* Built-in xref:usage/lsp.adoc[Language Server Protocol (LSP)] and xref:usage/mcp.adoc[Model Context Protocol (MCP)] support
+* Wide editor/IDE support via LSP
 * Many online services use RuboCop internally (e.g. CodeClimate and Codacy)
 * Best logo/stickers ever
 
