--- a/docs/modules/ROOT/pages/cops.adoc
+++ b/docs/modules/ROOT/pages/cops.adoc
@@ -2,28 +2,32 @@
 
 In RuboCop lingo the various checks performed on the code are called cops.
 Each cop is responsible for detecting one particular offense. There are several
-cop departments, grouping the cops by class of offense. A short description of
-the different departments is provided below.
+cop departments, grouping the cops by class of offense.
 
 Many of the Style and Layout cops have configuration options, allowing them to
-enforce different coding conventions.
+enforce different coding conventions. See xref:configuration/cop_settings.adoc[Configuring Cops]
+for details on `Enabled`, `Severity`, `AutoCorrect`, `AllowedMethods`, and other settings.
 
 You can also load xref:extensions.adoc#custom-cops[custom cops].
 
-Cop-related failures are silenced by default but can be turned on using the
-`--raise-cop-errors` option.
+== Departments
 
-== Style
+=== Style
 
 Style cops check for stylistic consistency of your code. Many of them are
-based on the https://rubystyle.guide[Ruby Style Guide].
+based on the https://rubystyle.guide[Ruby Style Guide]. This is the largest
+department and covers everything from preferred hash syntax to method naming
+conventions. Most Style cops support multiple `EnforcedStyle` options so you
+can adapt them to your team's preferences.
 
-== Layout
+=== Layout
 
 Layout cops inspect your code for consistent use of indentation, alignment,
-and white space.
+and white space. They deal exclusively with formatting — changing Layout cops
+never affects program behavior. Running `rubocop -x` applies only Layout
+autocorrections.
 
-== Lint
+=== Lint
 
 Lint cops check for ambiguities and possible errors in your code.
 
@@ -42,31 +46,45 @@ enabled Lint cops plus a selection of other cops.
 
 Disabling Lint cops is generally a bad idea.
 
-== Metrics
+=== Metrics
 
 Metrics cops deal with properties of the source code that can be measured,
-such as class length, method length, etc. Generally speaking, they have a
+such as class length, method length, and cyclomatic complexity. They have a
 configuration parameter called `Max` and when running
 `rubocop --auto-gen-config`, this parameter will be set to the highest value
 found for the inspected code.
 
-== Naming
+=== Naming
 
-Naming cops check for naming issues in your code, such as method name, constant
-name, file name, etc.
+Naming cops check for naming issues in your code, such as method names, constant
+names, file names, and predicate prefixes. Like Style cops, many support
+multiple enforced styles.
 
-== Security
+=== Security
 
 Security cops check for method calls and constructs which are known to be
-associated with potential security issues.
+associated with potential security issues, such as the use of `eval` or
+`YAML.load`.
 
-== Bundler
+=== Bundler
 
 Bundler cops check for style and bad practices in Bundler files, e.g. `Gemfile`.
 
-== Gemspec
+=== Gemspec
 
 Gemspec cops check for style and bad practices in gemspec files, e.g. `rubocop.gemspec`.
+
+== Cop metadata
+
+Each cop in https://github.com/rubocop/rubocop/blob/master/config/default.yml[config/default.yml] has metadata that helps you understand its status:
+
+* `VersionAdded` — the RuboCop version that introduced the cop
+* `VersionChanged` — the last version that changed the cop's behavior or defaults
+* `Enabled` — whether the cop is enabled by default
+* `SafeAutoCorrect` — whether the autocorrection is safe (won't change behavior)
+
+Cop-related errors are silenced by default but can be surfaced using the
+`--raise-cop-error` option, which is useful for debugging.
 
 == Available cops
 
